tests/res/nullability/factory_tag.say
// A factory's inferred return type propagates its tag to the call site.
type Cache {
    pub fn find()? {
        return null;
    }
}
fn makeCache()! {
    return Cache();
}
say c = makeCache();
say hit = c.find(); // error: Cannot assign a nullable value to non-null binding 'hit'
